# revmo

./: Cargo.toml  README.md
scripts/: install.sh  uninstall.sh
src/: args_page.rs  batch.rs  config.rs  help_page.rs  helpers.rs  main.rs  parser.rs  store.rs  styles.rs  testo.rs  theme.rs
