[package]
name = "revmo"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = {version = "0.13.1", features = ["debug", "image", "svg"]}
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.20.2"
smol_str = "0.3.2"


[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"